{
    "name": "GameActions",
    "maps": [
        {
            "name": "Player",
            "id": "c93d83a5-181a-4b18-bb3d-db58f69c7cea",
            "actions": [
                {
                    "name": "MoveHorizontal",
                    "type": "Value",
                    "id": "5cf6d75a-7c67-4f93-bab1-ba3c2edc8b55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveVertical",
                    "type": "Value",
                    "id": "5445cb63-43e8-482e-9bc9-7eb6775a388e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Axis",
                    "id": "0578be9c-59e0-40fc-a2d7-056bd89baa73",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "2e20d3b8-928b-408e-907e-20ceb824377a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "244b94bf-d830-45d7-ab12-e91d0d08911d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Axis",
                    "id": "391305f8-00b2-4d3c-86d0-2a85b25514bc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "cc619581-6f8c-40ef-bb50-f5d6f3ddcbd4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "95a2788e-ad55-49a5-b963-5c3dd2cd2127",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}